--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,7 +21,7 @@
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Background="Beige" Margin="2,0">
 						<StackPanel Background="LightGray" Margin="2,2">
-							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1">
 								<ListBoxItem Content="{Binding LogHeader}" />
 								<ListBoxItem Margin="10" Visibility="Hidden" />
 								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}" />
@@ -110,7 +110,7 @@
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Background="Beige" Margin="2,0">
 						<StackPanel Background="LightGray" Margin="2,2">
-							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1">
 								<ListBoxItem Content="{Binding LogHeader}" />
 								<ListBoxItem Margin="10" Visibility="Hidden" />
 								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}" />
@@ -199,7 +199,7 @@
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Background="Beige" Margin="2,0">
 						<StackPanel Background="LightGray" Margin="2,2">
-							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1">
 								<ListBoxItem Content="{Binding LogHeader}" />
 								<ListBoxItem Margin="10" Visibility="Hidden" />
 								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}" />
