--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -36,7 +36,7 @@
 					</Grid>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="1" Background="Beige" Margin="2,0">
 						<StackPanel Tag="Enableable" Background="LightGray" Margin="2,2">
-							<Button x:Name="F_ThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="10,10" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
+							<Button Height="25" Width="40" HorizontalAlignment="Right" Margin="10,10" Background="Beige" Content="{Binding ThemeLabel}" Click="ThemeSelector_Click"/>
 							<Label FontFamily="Arial" FontSize="14" Width="300" Height="26" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="15,0,0,0" Content="Path to Source Log File"/>
 							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 								<Button Width="20" Height="20" HorizontalAlignment="Center" Margin="-15,0,10,0" Background="Beige" Click="SingleSource_Click" Content="..."/>
@@ -54,7 +54,7 @@
 								</StackPanel>
 								<StackPanel Margin="25,0,0,0">
 									<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages before..."/>
-                                    <DatePicker x:Name="F_BeforeDate" Width="120" SelectedDate="{Binding BeforeDate}" Background="White" BorderBrush="#FF333333"/>
+									<DatePicker x:Name="F_BeforeDate" Width="120" SelectedDate="{Binding BeforeDate}" Background="White" BorderBrush="#FF333333"/>
 								</StackPanel>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,30,0,0" Orientation="Horizontal">
@@ -125,7 +125,7 @@
 					</Grid>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="1" Background="Beige" Margin="2,0">
 						<StackPanel Tag="Enableable" Background="LightGray" Margin="2,2">
-							<Button x:Name="D_ThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="10,10" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
+							<Button Height="25" Width="40" HorizontalAlignment="Right" Margin="10,10" Background="Beige" Content="{Binding ThemeLabel}" Click="ThemeSelector_Click"/>
 							<Label FontFamily="Arial" FontSize="14" Width="300" Height="26" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="15,0,0,0" Content="Path to Source Log Files"/>
 							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 								<Button Width="20" Height="20" HorizontalAlignment="Center" Margin="-15,0,10,0" Background="Beige" Click="MultiSource_Click" Content="..."/>
@@ -143,7 +143,7 @@
 								</StackPanel>
 								<StackPanel Margin="25,0,0,0">
 									<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages before..."/>
-                                    <DatePicker x:Name="D_BeforeDate" Width="120" SelectedDate="{Binding BeforeDate}" Background="White" BorderBrush="#FF333333"/>
+									<DatePicker x:Name="D_BeforeDate" Width="120" SelectedDate="{Binding BeforeDate}" Background="White" BorderBrush="#FF333333"/>
 								</StackPanel>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,30,0,0" Orientation="Horizontal">
@@ -214,7 +214,7 @@
 					</Grid>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="1" Background="Beige" Margin="2,0">
 						<StackPanel Tag="Enableable" Background="LightGray" Margin="2,2">
-							<Button x:Name="P_ThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="10,10" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
+							<Button Height="25" Width="40" HorizontalAlignment="Right" Margin="10,10" Background="Beige" Content="{Binding ThemeLabel}" Click="ThemeSelector_Click"/>
 							<Label FontFamily="Arial" FontSize="14" Width="300" Height="26" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="15,0,0,0" Content="Path to Source Log Files"/>
 							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 								<Button Width="20" Height="20" HorizontalAlignment="Center" Margin="-15,0,10,0" Background="Beige" Click="MultiSource_Click" Content="..."/>
@@ -230,16 +230,16 @@
 								<CheckBox x:Name="RegexCheckBox" Width="16" Height="16" HorizontalAlignment="Center" Margin="-12,0,10,0" Background="Beige" Checked="TextboxUpdated" Unchecked="TextboxUpdated" IsChecked="False"/>
 								<TextBox x:Name="P_Search" Width="300" Height="20" HorizontalAlignment="Center" Margin="2,0,0,0" BorderBrush="#FF333333" BorderThickness="1" TextChanged="TextboxUpdated"/>
 							</StackPanel>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="20,5,0,0">
-                                <StackPanel>
-                                    <Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages after..."/>
-                                    <DatePicker x:Name="P_AfterDate" Width="120" SelectedDate="{Binding AfterDate}" Background="White" BorderBrush="#FF333333"/>
-                                </StackPanel>
-                                <StackPanel Margin="25,0,0,0">
-                                    <Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages before..."/>
-                                    <DatePicker x:Name="P_BeforeDate" Width="120" SelectedDate="{Binding BeforeDate}" Background="White" BorderBrush="#FF333333"/>
-                                </StackPanel>
-                            </StackPanel>
+							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="20,5,0,0">
+								<StackPanel>
+									<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages after..."/>
+									<DatePicker x:Name="P_AfterDate" Width="120" SelectedDate="{Binding AfterDate}" Background="White" BorderBrush="#FF333333"/>
+								</StackPanel>
+								<StackPanel Margin="25,0,0,0">
+									<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages before..."/>
+									<DatePicker x:Name="P_BeforeDate" Width="120" SelectedDate="{Binding BeforeDate}" Background="White" BorderBrush="#FF333333"/>
+								</StackPanel>
+							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,30,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Divide logs by date?"/>
 								<CheckBox x:Name="P_DivideLogsCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable"  Click="FormatOverride"/>
