--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,25 +12,25 @@
 			<TabItem Header="File">
 				<Grid>
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
-						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="3*" />
-						<RowDefinition Height="*" />
+						<RowDefinition Height="3*"/>
+						<RowDefinition Height="*"/>
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Background="Beige" Margin="2,0">
 						<StackPanel Background="LightGray" Margin="2,2">
 							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1">
-								<ListBoxItem Content="{Binding LogHeader}" />
-								<ListBoxItem Margin="10" Visibility="Hidden" />
-								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}" />
-								<ListBoxItem Content="{Binding CorruptedTimestamps}" />
-								<ListBoxItem Content="{Binding TruncatedMessages}" />
-								<ListBoxItem Content="{Binding EmptyMessages}" />
-								<ListBoxItem Content="{Binding UnreadData}" />
-								<ListBoxItem Margin="10" Visibility="Hidden" />
-								<ListBoxItem Tag="WarningLabel" Foreground="Red" Content="{Binding Exception}" />
+								<ListBoxItem Content="{Binding LogHeader}"/>
+								<ListBoxItem Margin="10" Visibility="Hidden"/>
+								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}"/>
+								<ListBoxItem Content="{Binding CorruptedTimestamps}"/>
+								<ListBoxItem Content="{Binding TruncatedMessages}"/>
+								<ListBoxItem Content="{Binding EmptyMessages}"/>
+								<ListBoxItem Content="{Binding UnreadData}"/>
+								<ListBoxItem Margin="10" Visibility="Hidden"/>
+								<ListBoxItem Tag="WarningLabel" Foreground="Red" Content="{Binding Exception}"/>
 							</ListBox>
 						</StackPanel>
 					</Grid>
@@ -59,15 +59,15 @@
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,30,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Divide logs by date?"/>
-								<CheckBox x:Name="F_DivideLogsCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable" Click="FormatOverride"/>
+								<CheckBox x:Name="F_DivideLogs" VerticalAlignment="Center" IsChecked="{Binding DivideLogs}" Tag="Enableable"/>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,20,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Save non-intact messages?"/>
-								<CheckBox x:Name="F_SaveTruncatedCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable" Click="FormatOverride"/>
+								<CheckBox x:Name="F_SaveTruncated" VerticalAlignment="Center" IsChecked="{Binding SaveTruncated}" Tag="Enableable"/>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,20,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Save to HTML?"/>
-								<CheckBox x:Name="F_SaveHTMLCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable" Click="FormatOverride"/>
+								<CheckBox x:Name="F_SaveHTML" VerticalAlignment="Center" IsChecked="{Binding SaveHTML}" Tag="Enableable"/>
 							</StackPanel>
 						</StackPanel>
 					</Grid>
@@ -90,7 +90,7 @@
 									<Button x:Name="F_RunButton" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,20" Background="Beige" IsEnabled="False" Click="RunButton_Click" Content="{Binding RunLabel}" Tag="F_"/>
 								</StackPanel>
 								<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
-									<ProgressBar Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="{Binding ProgressMax}" Value="{Binding Progress}" />
+									<ProgressBar Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="{Binding ProgressMax}" Value="{Binding Progress}"/>
 								</StackPanel>
 							</Grid>
 							<Label Content="{Binding VersionString}" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,30" FontWeight="Thin"/>
@@ -101,25 +101,25 @@
 			<TabItem Header="Directory">
 				<Grid>
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
-						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="3*" />
-						<RowDefinition Height="*" />
+						<RowDefinition Height="3*"/>
+						<RowDefinition Height="*"/>
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Background="Beige" Margin="2,0">
 						<StackPanel Background="LightGray" Margin="2,2">
 							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1">
-								<ListBoxItem Content="{Binding LogHeader}" />
-								<ListBoxItem Margin="10" Visibility="Hidden" />
-								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}" />
-								<ListBoxItem Content="{Binding CorruptedTimestamps}" />
-								<ListBoxItem Content="{Binding TruncatedMessages}" />
-								<ListBoxItem Content="{Binding EmptyMessages}" />
-								<ListBoxItem Content="{Binding UnreadData}" />
-								<ListBoxItem Margin="10" Visibility="Hidden" />
-								<ListBoxItem Tag="WarningLabel" Foreground="Red" Content="{Binding Exception}" />
+								<ListBoxItem Content="{Binding LogHeader}"/>
+								<ListBoxItem Margin="10" Visibility="Hidden"/>
+								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}"/>
+								<ListBoxItem Content="{Binding CorruptedTimestamps}"/>
+								<ListBoxItem Content="{Binding TruncatedMessages}"/>
+								<ListBoxItem Content="{Binding EmptyMessages}"/>
+								<ListBoxItem Content="{Binding UnreadData}"/>
+								<ListBoxItem Margin="10" Visibility="Hidden"/>
+								<ListBoxItem Tag="WarningLabel" Foreground="Red" Content="{Binding Exception}"/>
 							</ListBox>
 						</StackPanel>
 					</Grid>
@@ -148,15 +148,15 @@
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,30,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Divide logs by date?"/>
-								<CheckBox x:Name="D_DivideLogsCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable"  Click="FormatOverride"/>
+								<CheckBox x:Name="D_DivideLogs" VerticalAlignment="Center" IsChecked="{Binding DivideLogs}" Tag="Enableable"/>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,20,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Save non-intact messages?"/>
-								<CheckBox x:Name="D_SaveTruncatedCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable"  Click="FormatOverride"/>
+								<CheckBox x:Name="D_SaveTruncated" VerticalAlignment="Center" IsChecked="{Binding SaveTruncated}" Tag="Enableable"/>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,20,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Save to HTML?"/>
-								<CheckBox x:Name="D_SaveHTMLCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable" Click="FormatOverride"/>
+								<CheckBox x:Name="D_SaveHTML" VerticalAlignment="Center" IsChecked="{Binding SaveHTML}" Tag="Enableable"/>
 							</StackPanel>
 						</StackPanel>
 					</Grid>
@@ -179,7 +179,7 @@
 									<Button x:Name="D_RunButton" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,20" Background="Beige" IsEnabled="False" Click="RunButton_Click" Content="{Binding RunLabel}" Tag="D_"/>
 								</StackPanel>
 								<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5">
-									<ProgressBar Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="{Binding ProgressMax}" Value="{Binding Progress}" />
+									<ProgressBar Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="{Binding ProgressMax}" Value="{Binding Progress}"/>
 								</StackPanel>
 							</Grid>
 							<Label Content="{Binding VersionString}" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,30" FontWeight="Thin"/>
@@ -190,25 +190,25 @@
 			<TabItem Header="Phrase">
 				<Grid>
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
-						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="3*" />
-						<RowDefinition Height="*" />
+						<RowDefinition Height="3*"/>
+						<RowDefinition Height="*"/>
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Background="Beige" Margin="2,0">
 						<StackPanel Background="LightGray" Margin="2,2">
 							<ListBox IsHitTestVisible="False" Width="350" Height="430" Margin="0,21" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="#FF333333" BorderThickness="1">
-								<ListBoxItem Content="{Binding LogHeader}" />
-								<ListBoxItem Margin="10" Visibility="Hidden" />
-								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}" />
-								<ListBoxItem Content="{Binding CorruptedTimestamps}" />
-								<ListBoxItem Content="{Binding TruncatedMessages}" />
-								<ListBoxItem Content="{Binding EmptyMessages}" />
-								<ListBoxItem Content="{Binding UnreadData}" />
-								<ListBoxItem Margin="10" Visibility="Hidden" />
-								<ListBoxItem Tag="WarningLabel" Foreground="Red" Content="{Binding Exception}" />
+								<ListBoxItem Content="{Binding LogHeader}"/>
+								<ListBoxItem Margin="10" Visibility="Hidden"/>
+								<ListBoxItem FontWeight="Bold" Content="{Binding IntactMessages}"/>
+								<ListBoxItem Content="{Binding CorruptedTimestamps}"/>
+								<ListBoxItem Content="{Binding TruncatedMessages}"/>
+								<ListBoxItem Content="{Binding EmptyMessages}"/>
+								<ListBoxItem Content="{Binding UnreadData}"/>
+								<ListBoxItem Margin="10" Visibility="Hidden"/>
+								<ListBoxItem Tag="WarningLabel" Foreground="Red" Content="{Binding Exception}"/>
 							</ListBox>
 						</StackPanel>
 					</Grid>
@@ -242,15 +242,15 @@
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,30,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Divide logs by date?"/>
-								<CheckBox x:Name="P_DivideLogsCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable"  Click="FormatOverride"/>
+								<CheckBox x:Name="P_DivideLogs" VerticalAlignment="Center" IsChecked="{Binding DivideLogs}" Tag="Enableable"/>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,20,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Save non-intact messages?"/>
-								<CheckBox x:Name="P_SaveTruncatedCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable"  Click="FormatOverride"/>
+								<CheckBox x:Name="P_SaveTruncated" VerticalAlignment="Center" IsChecked="{Binding SaveTruncated}" Tag="Enableable"/>
 							</StackPanel>
 							<StackPanel HorizontalAlignment="Center" Margin="0,20,0,0" Orientation="Horizontal">
 								<Label FontFamily="Arial" FontSize="12" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Foreground="Black" Content="Save to HTML?"/>
-								<CheckBox x:Name="P_SaveHTMLCheckbox" VerticalAlignment="Center" IsChecked="False" Tag="Enableable" Click="FormatOverride"/>
+								<CheckBox x:Name="P_SaveHTML" VerticalAlignment="Center" IsChecked="{Binding SaveHTML}" Tag="Enableable"/>
 							</StackPanel>
 						</StackPanel>
 					</Grid>
@@ -273,7 +273,7 @@
 									<Button x:Name="P_RunButton" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,20" Background="Beige" IsEnabled="False" Click="RunButton_Click" Content="{Binding RunLabel}" Tag="P_"/>
 								</StackPanel>
 								<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5">
-									<ProgressBar Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="{Binding ProgressMax}" Value="{Binding Progress}" />
+									<ProgressBar Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="{Binding ProgressMax}" Value="{Binding Progress}"/>
 								</StackPanel>
 							</Grid>
 							<Label Content="{Binding VersionString}" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,30" FontWeight="Thin"/>
@@ -284,12 +284,12 @@
 			<TabItem Header="Help">
 				<Grid>
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
-						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="*" />
-						<RowDefinition Height="*" />
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="*"/>
 					</Grid.RowDefinitions>
 					<Grid Tag="PanelGrid" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Background="Beige" Margin="2,0,2,2">
 						<StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Background="LightGray" Margin="2,2">
